Added new A* algorithm